# comicinfo-editor

./: .gitignore  README.md  claude.md  package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  comicinfo.rs  filename_parser.rs  lib.rs  main.rs
