[package]
name = "comicinfo-editor"
version = "0.1.0"
description = "A desktop application for editing ComicInfo v2.1 metadata in CBZ files"
authors = ["you"]
edition = "2021"

[lib]
name = "comicinfo_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2.2"
quick-xml = { version = "0.37", features = ["serialize"] }
base64 = "0.22"

